// Copyright 2017 Intel Corporation
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";

option java_multiple_files = true;
option java_package = "sawtooth.sdk.protobuf";
option go_package = "merkle_pb2";

// A node in the merkle trie
message MerkleNode {
    enum ValueState {
        VALUE_UNSET = 0;
        VALUE_SET = 1;
    }
    // The value at a given node. Generally this is empty, except in the case
    // of leaf nodes
    bytes value = 1;
    // Indicates whether or not the value is actually set
    ValueState value_state = 2;
    // list of path children of this node
    repeated MerklePath children = 3;
}

// A Path entry.  This this made up of a portion of the path and the hash of
// the remaining entries along the rest of the path.
message MerklePath {
    // The path branch is a portion of the address at given trie.
    string path_branch = 1;
    // the hash of all elements below this path in the trie
    string hash_key = 2;
}
